--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "koa": "^2.4.1",
     "koa-bodyparser": "^4.2.0",
     "koa-router": "^7.3.0",
-    "koa-static": "^4.0.2"
+    "koa-static": "^4.0.2",
+    "mongoose": "^5.0.0-rc2"
   },
   "devDependencies": {},
   "scripts": {
